--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.9.0",
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.9.0",
