--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "node node_modules/.bin/webpack-dev-server --host=0.0.0.0 --content-base app"
+    "start": "node node_modules/.bin/webpack-dev-server --host=0.0.0.0 --content-base app",
+    "build": "babel input.js -o compiled.js"
   },
   "dependencies": {
     "angular": "^1.5.0",
@@ -18,7 +19,7 @@
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "style-loader": "^0.13.0",
-    "webpack": "^1.13.1",
+    "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   }
 }
