--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "angular": "^1.5.0",
     "angular-ui-router": "^0.2.18",
+    "angularfire": "^1.2.0",
+     "firebase": "^3.0.2",
     "bootstrap": "^3.3.6",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
